<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/batteryLogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_log_input"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descPrompt">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/startPercentage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/startPercentPrompt"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/endPercentage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/endPercentPrompt"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/durationPrompt"
        android:inputType="number" />
    
    <Button
        android:id="@+id/completeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishAdd"	/>
    
    
</LinearLayout>