<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/batteryLogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/battLogTitle"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/batteryLogList"
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:choiceMode="singleChoice"
        android:scrollbars="vertical" >
    </ListView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton" />

</LinearLayout>
